--- a/view.phtml
+++ b/view.phtml
@@ -8,6 +8,7 @@
         <h1>Enter and submit text</h1>
         <form action="/" method="post">
             <div>
+                <input type="hidden" name="csrf" value="<?=$csrf?>">
                 <textarea
                         name="textarea"
                         placeholder="<?=htmlspecialchars($placeholder)?>"
